added contact form and javascript

--- a/contact.html
+++ b/contact.html
@@ -35,8 +35,8 @@
             <div id="nav">
             <ul>
                 <li><a href="about.html">About Me</a></li>
-                <li><a href="portfolio.html" id="selected">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="portfolio.html">Projects</a></li>
+                <li><a href="contact.html" id="selected">Contact</a></li>
             </ul>
         </div>
             <div id="social">
@@ -51,9 +51,31 @@
   </div>
      <div class="content"> <!---start of content area--->
          <div id="about-p-0">
-         <h1>Me</h1>
-         <h3>I am_</h3>
-         </div>
+         <h1>Contact Me</h1>
+         <h3>details_</h3>
+        </div>
+
+
+    <form action="" method="">
+    <div>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="user_name" placeholder="Name"/>
+    </div>
+    <div>
+        <label for="mail">E-mail:</label>
+        <input type="email" id="mail" name="user_mail" placeholder="E-mail" />
+    </div>
+    <div>
+        <label for="msg">Text: </label>
+        <textarea id="msg" name="user_message" placeholder="Leave me a nice message!"></textarea>
+    </div>
+
+    <div class="button">
+        <button type="submit">Send your message</button>
+    </div>
+    </form>
+
+
 
 
 
@@ -67,5 +89,6 @@
          </footer>
       </div><!--- end of content area --->
 
+<script src="style/javascript.js"></script>
       </body>
   </html>
