--- a/contact.html
+++ b/contact.html
@@ -59,15 +59,15 @@
     <form action="" method="">
     <div>
         <label for="name">Name:</label>
-        <input type="text" id="name" name="user_name" placeholder="Name"/>
+        <input type="text" id="name" name="user_name" placeholder="Name" required/>
     </div>
     <div>
         <label for="mail">E-mail:</label>
-        <input type="email" id="mail" name="user_mail" placeholder="E-mail" />
+        <input type="email" id="mail" name="user_mail" placeholder="E-mail" required/>
     </div>
     <div>
         <label for="msg">Text: </label>
-        <textarea id="msg" name="user_message" placeholder="Leave me a nice message!"></textarea>
+        <textarea id="msg" name="user_message" placeholder="Leave me a nice message!" required></textarea>
     </div>
 
     <div class="button">
