--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="style/main.css" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Homemade+Apple" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <link rel="icon" href="images/logo.png"> <!--- logo in tab --->
     <title>Erik Mura</title>
 </head>
@@ -36,7 +37,7 @@
         <div id="nav">
             <ul>
                 <li><a href="about.html">About Me</a></li>
-                <li><a href="portfolio.html" id="selected">Projects</a></li>
+                <li><a href="portfolio.html" id="selected">Portfolio</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
@@ -44,13 +45,11 @@
         <div id="social">
             <ul>
                 <li><a href="https://github.com/erikmura44/" alt="github" target="_blank"><img src="images/social-github.svg" alt="github" /></a></li>
-                <li><a href="https://www.facebook.com/erikmura" alt="facebook" target="_blank"><img src="images/social-facebook.svg" alt="facebook"/></a></li>
-                <li><a href="https://twitter.com/Erik_Mura" alt="twitter" target="_blank"><img src="images/social-twitter.svg" alt="twitter"/></a></li>
                 <li><a href="https://www.linkedin.com/in/erik-mura-144b5a1a" alt="linkedin" target="_blank"><img src="images/social-linkedin.svg" alt="linkedin"/></a></li>
             </ul>
         </div>
-    </div>
-</div><!--- end of header content --->
+    </div><!--- end of header content --->
+</div><!--- end of header container --->
 
 
 <div class="content"> <!---start of content area--->
@@ -82,7 +81,7 @@
 
 <footer>
     <div class="nav-bottom">
-        <div class="copyright">&copy 2016 E Mura LLC</div>
+        <div class="copyright">&copy; 2016 E Mura LLC</div>
         <div id="signature"><h4>Erik Mura</h4></div>
     </div>
 </footer>
@@ -92,7 +91,7 @@
 </div><!--- end of content area --->
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
 <script src="style/javascript.js"></script>
 
 </body>
